new endpoints returning static json for fs-3024 work
